Fixing clipping problem of edit-event popup

--- a/static/stylesheets/style.css
+++ b/static/stylesheets/style.css
@@ -63,7 +63,7 @@ section, footer {
 .main-inner {
   display: flex;
   justify-content: space-around;
-  align-items: center;
+  align-items: flex-start;
   align-content: flex-start;
   max-width: 960px;
   height: 100%;
